--- a/proof of concept/proof of concept1.html
+++ b/proof of concept/proof of concept1.html
@@ -61,6 +61,8 @@
 wiring
 </h1>
 <img src="123 POC.jpg" height="50%" width="50%" border="1px" alt=""  />
+<h1><a href="code.txt">code</a></h1>
+<h1><a href="video1.mp4">video</a></h1>
 
 
 
